# chef_msg

./: .gitignore  LICENSE  README.md  chopper.py  ppImage.py  requirements.txt  setup.cfg
chef_msg/: mommy.py  stock.py
src/chopper/: chopper.py
