[metadata]
name = chef_msg
version = 0.0.2
author = sangggho
author_email = sangggho@gmail.com
description = special pre-processing for image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sangggho/chef
project_urls =
    Bug Tracker = https://github.com/sangggho/chef/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = chef
python_requires = >=3.8